# event-driven-crypto

./: .gitignore  README.md  README_WEB.md  pyproject.toml  requirements.txt  start_backend.bat  start_backend.sh  start_frontend.bat
backend/: __init__.py  api.py
data/: market.db
frontend/: index.html  package.json
frontend/src/: App.vue
frontend/src/components/: DataSync.vue
src/: __init__.py  binance_service.py  database.py  ingest.py  main.py
tests/: test_main.py
